[gd_scene load_steps=5 format=3 uid="uid://cnie27irw2ene"]

[ext_resource type="Script" path="res://scripts/singleplayer/player_handler.gd" id="1_jprhx"]
[ext_resource type="Texture2D" uid="uid://cpuha70ui6ytg" path="res://sprites/Aim_Right.png" id="4_i7kdi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5b62u"]
size = Vector2(7.89475, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1khi"]
size = Vector2(23, 21)

[node name="Player Character" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_jprhx")

[node name="Main Camera" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="PlayerPivot" type="Node2D" parent="Main Camera"]
z_index = 1

[node name="Aim Sight" type="Node2D" parent="Main Camera/PlayerPivot"]
position = Vector2(12, 0)

[node name="Sprite2D" type="Sprite2D" parent="Main Camera/PlayerPivot/Aim Sight"]
z_index = -1
texture_filter = 1
texture = ExtResource("4_i7kdi")

[node name="WorldInteraction" type="CollisionShape2D" parent="."]
position = Vector2(-2.98023e-08, -6.5)
scale = Vector2(0.759999, 1)
shape = SubResource("RectangleShape2D_5b62u")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, -7.5)
shape = SubResource("RectangleShape2D_x1khi")
debug_color = Color(0.926885, 0.246329, 0.29079, 0.42)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
